- changed storage local to sync - options code cleanup - reworked config fetch, load and store behavior

--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="../../css/layout.css">
   <link rel="stylesheet" href="../../css/content.css">
   <link rel="stylesheet" href="../../css/blacklist.css">
+  <link rel="stylesheet" id="Theme">
 
   <script src="../../js/content.js" defer></script>
   <script src="../../js/content/blacklist.js" defer></script>
@@ -32,7 +33,7 @@
       <span data-i18n="explanationBlacklistText"></span>
     </p>
     <div class="bl-insert">
-      <input id="blAddressInput" class="input-field bl-addAddress">
+      <input id="blAddressInput" class="bl-addAddress">
       <button data-i18n="blacklistNameAdd" class="bl-add-button" id="blAddEntry" type="button"></button>
     </div>
     <ul class="blacklist" id="blacklist"></ul>
