--- a/src/ui/html/content/settings.html
+++ b/src/ui/html/content/settings.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../../css/layout.css">
   <link rel="stylesheet" href="../../css/content.css">
+  <link rel="stylesheet" id="Theme">
 
   <script src="../../js/content.js" defer></script>
   <script src="../../js/content/settings.js" defer></script>
