--- a/src/ui/html/content/extras.html
+++ b/src/ui/html/content/extras.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../../css/layout.css">
   <link rel="stylesheet" href="../../css/content.css">
+  <link rel="stylesheet" id="Theme">
 
   <script src="../../js/modules/overlay.js" defer></script>
   <script src="../../js/modules/command-bar.js" defer></script>
