--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Gesturefy</title>
   <link rel="icon" type="image/png" href="../../res/icons/iconx32.png" sizes="16x16">
-  <link rel="stylesheet" id="themeStylesheet">
   <link rel="stylesheet" href="../css/layout.css">
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/modules/overlay.css">
   <link rel="stylesheet" href="../css/modules/command-bar.css">
   <link rel="stylesheet" href="../css/modules/gesture.css">
+  <link rel="stylesheet" id="Theme">
 
   <script src="../../lib/backgroundCommons.js" defer></script>
   <script src="../js/index.js" defer></script>
@@ -62,7 +62,7 @@
 
   </div>
 
-  <iframe id="Content" name="Content" height="100%" src="content/settings.html"></iframe>
+  <iframe id="Content" name="Content" height="100%"></iframe>
 
   <template id="CommandSettings">
     <template data-commands="NewTab">
