--- a/src/ui/html/content/settings.html
+++ b/src/ui/html/content/settings.html
@@ -22,11 +22,13 @@
             <p data-i18n="settingDescriptionMouseButton" class="ol-description"></p>
           </div>
           <div class="ol-input">
-            <select data-hierarchy="Gesture" name="mouseButton" class="select-field">
-              <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
-              <option value="2" data-i18n="settingNameMouseButtonRight"></option>
-              <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
-            </select>
+            <div class="select-wrapper">
+              <select data-hierarchy="Gesture" name="mouseButton" class="select-field">
+                <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
+                <option value="2" data-i18n="settingNameMouseButtonRight"></option>
+                <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
+              </select>
+            </div>
           </div>
         </div>
         <div class="ol-item">
@@ -59,12 +61,14 @@
             <p data-i18n="settingDescriptionSuppressionKey" class="ol-description"></p>
           </div>
           <div class="ol-input">
-            <select data-hierarchy="Gesture" name="suppressionKey" class="select-field">
-              <option value="" data-i18n="settingNameNoneKey"></option>
-              <option value="altKey" data-i18n="settingNameAltKey"></option>
-              <option value="ctrlKey" data-i18n="settingNameCtrlKey"></option>
-              <option value="shiftKey" data-i18n="settingNameShiftKey"></option>
-            </select>
+            <div class="select-wrapper">
+              <select data-hierarchy="Gesture" name="suppressionKey" class="select-field">
+                <option value="" data-i18n="settingNameNoneKey"></option>
+                <option value="altKey" data-i18n="settingNameAltKey"></option>
+                <option value="ctrlKey" data-i18n="settingNameCtrlKey"></option>
+                <option value="shiftKey" data-i18n="settingNameShiftKey"></option>
+              </select>
+            </div>
           </div>
         </div>
         <div class="ol-item">
@@ -235,11 +239,13 @@
               <p data-i18n="settingNameDirectionsTextAlign" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <select data-hierarchy="Gesture.Directions.style" name="textAlign" class="select-field">
-                <option value="left" data-i18n="settingNameDirectionsTextAlignLeft"></option>
-                <option value="right" data-i18n="settingNameDirectionsTextAlignRight"></option>
-                <option value="center" data-i18n="settingNameDirectionsTextAlignCenter"></option>
-              </select>
+              <div class="select-wrapper">
+                <select data-hierarchy="Gesture.Directions.style" name="textAlign" class="select-field">
+                  <option value="left" data-i18n="settingNameDirectionsTextAlignLeft"></option>
+                  <option value="right" data-i18n="settingNameDirectionsTextAlignRight"></option>
+                  <option value="center" data-i18n="settingNameDirectionsTextAlignCenter"></option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
