--- a/src/ui/html/content/extras.html
+++ b/src/ui/html/content/extras.html
@@ -61,11 +61,13 @@
             <p data-i18n="extraDescriptionWheelMouseButton" class="ol-description"></p>
           </div>
           <div class="ol-input">
-            <select data-hierarchy="Wheel" name="mouseButton" class="select-field">
-              <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
-              <option value="2" data-i18n="settingNameMouseButtonRight"></option>
-              <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
-            </select>
+            <div class="select-wrapper">
+              <select data-hierarchy="Wheel" name="mouseButton" class="select-field">
+                <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
+                <option value="2" data-i18n="settingNameMouseButtonRight"></option>
+                <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
+              </select>
+            </div>
           </div>
         </div>
         <div class="ol-item">
