changed line growth setting from value to boolean

--- a/src/ui/html/content/settings.html
+++ b/src/ui/html/content/settings.html
@@ -136,7 +136,8 @@
               <p data-i18n="settingDescriptionTraceGrowth" class="ol-description"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Trace.style" name="lineGrowth" class="input-field" type="number" required step="0.01" max="999" min="0.01">
+              <input data-hierarchy="Gesture.Trace.style" name="lineGrowth" id="SettingLineGrowth" class="toggle-button" type="checkbox">
+              <label for="SettingLineGrowth"></label>
             </div>
           </div>
         </div>
