changed blacklist layout and added new font

--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -34,7 +34,7 @@
     </p>
     <div class="bl-insert">
       <input id="blAddressInput" class="bl-addAddress">
-      <button data-i18n="blacklistNameAdd" class="bl-add-button" id="blAddEntry" type="button"></button>
+      <button class="bl-add-button" id="blAddEntry" type="button">+</button>
     </div>
     <ul class="blacklist" id="blacklist"></ul>
   </main>
