added hint at blacklist

--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -36,7 +36,9 @@
       <input id="blAddressInput" class="bl-addAddress">
       <button class="bl-add-button" id="blAddEntry" type="button">+</button>
     </div>
-    <ul class="blacklist" id="blacklist"></ul>
+    <ul class="blacklist" id="blacklist">
+      <li id="blEmptyUrls" class="bl-emptyURLs"></li>
+    </ul>
   </main>
 </body>
 </html>
