changes relative url paths to root urls

--- a/src/ui/html/content/about.html
+++ b/src/ui/html/content/about.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../../css/layout.css">
-  <link rel="stylesheet" href="../../css/content.css">
+  <link rel="stylesheet" href="/ui/css/layout.css">
+  <link rel="stylesheet" href="/ui/css/content.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="../../js/content.js" defer></script>
-  <script src="../../js/content/about.js" defer></script>
+  <script src="/ui/js/content.js" defer></script>
+  <script src="/ui/js/content/about.js" defer></script>
 </head>
 
 <body>
