--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../../css/layout.css">
-  <link rel="stylesheet" href="../../css/content.css">
-  <link rel="stylesheet" href="../../css/blacklist.css">
+  <link rel="stylesheet" href="/ui/css/layout.css">
+  <link rel="stylesheet" href="/ui/css/content.css">
+  <link rel="stylesheet" href="/ui/css/blacklist.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="../../js/content.js" defer></script>
-  <script src="../../js/content/blacklist.js" defer></script>
+  <script src="/ui/js/content.js" defer></script>
+  <script src="/ui/js/content/blacklist.js" defer></script>
 </head>
 <body>
 
