--- a/src/ui/html/content/extras.html
+++ b/src/ui/html/content/extras.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../../css/layout.css">
-  <link rel="stylesheet" href="../../css/content.css">
+  <link rel="stylesheet" href="/ui/css/layout.css">
+  <link rel="stylesheet" href="/ui/css/content.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="../../js/modules/overlay.js" defer></script>
-  <script src="../../js/modules/command-bar.js" defer></script>
-  <script src="../../js/content.js" defer></script>
-  <script src="../../js/content/extras.js" defer></script>
+  <script src="/ui/js/modules/overlay.js" defer></script>
+  <script src="/ui/js/modules/command-bar.js" defer></script>
+  <script src="/ui/js/content.js" defer></script>
+  <script src="/ui/js/content/extras.js" defer></script>
 </head>
 
 <body>
